--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background: url('/images/3.jpg') no-repeat center center/cover;
+    background: url('images/3.jpg') no-repeat center center/cover;
     position: relative;
     color: white;
 }
@@ -456,7 +456,7 @@
         <div class="hero-container">
             <!-- Round Image Placeholder -->
             <div class="hero-image">
-                <img src="/images/Cover.jpeg" alt="Shubham's Photo">
+                <img src="images/Cover.jpeg" alt="Shubham's Photo">
             </div>
             <!-- Intro Text -->
             <div class="hero-text">
@@ -518,11 +518,11 @@
     <section id="projects" class="section projects" href="#projects">
         <h2>My Projects</h2>
         <div class="project-list">
-            <div class="project-item" style="background-image: url('/images/Affiliate.jpg');">
+            <div class="project-item" style="background-image: url('images/Affiliate.jpg');">
                 <h3><a href="http://amazon-affiliate.42web.io/?i=1" style="color: gold;"> Amazon Affiliate</a></h3>
                 <p>A website where customers can buy the best products through affiliate links.</p>
             </div>
-            <div class="project-item" style="background-image: url('/images/Autheentication.jpg');">
+            <div class="project-item" style="background-image: url('images/Autheentication.jpg');">
                 <h3><a href="http://authentication-sys.rf.gd/?i=1" style="color: gold;"> iDiscuss 24x7</a></h3>
                 <p>An authentication system where users can log in securely using email and password.</p>
             </div>
