--- a/index.html
+++ b/index.html
@@ -6,448 +6,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Shubham's Portfolio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <style>
-        /* Global Styles */
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Arial', sans-serif;
-        }
-
-        body {
-            overflow-x: hidden;
-            scroll-behavior: smooth;
-        }
-
-        nav {
-            position: fixed;
-            width: 100%;
-            top: 0;
-            left: 0;
-            background-color: #333;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 10px 50px;
-            z-index: 1000;
-        }
-
-        nav .logo h1 {
-            color: #fff;
-        }
-
-        nav .nav-links {
-            list-style: none;
-            display: flex;
-            justify-content: space-around;
-        }
-
-        nav .nav-links li {
-            margin-left: 20px;
-        }
-
-        nav .nav-links a {
-            color: white;
-            text-decoration: none;
-            font-size: 1.2rem;
-            transition: 0.3s;
-        }
-
-        nav .nav-links a:hover {
-            color: #e91e63;
-        }
-
-        .burger {
-            display: none;
-            flex-direction: column;
-            cursor: pointer;
-        }
-
-        .burger div {
-            width: 25px;
-            height: 3px;
-            background-color: white;
-            margin: 5px;
-        }
-
-/* Modern Hero Section */
-.hero {
-    height: 100vh; /* Full screen height */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: url('images/3.jpg') no-repeat center center/cover;
-    position: relative;
-    color: white;
-}
-
-/* Background Overlay */
-.hero-overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.6); /* Dark gradient overlay to make the text stand out */
-}
-
-
-.hero-container {
-    z-index: 1; /* Ensures content stays above the overlay */
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    padding: 50px;
-}
-
-/* Round Hero Image */
-.hero-image {
-    width: 300px; /* Set the width for the container */
-    height: 300px; /* Set height equal to width for a perfect circle */
-    overflow: hidden; /* Hide overflow to maintain circular shape */
-    border-radius: 50%; /* Make the image round */
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.5); /* Add shadow for depth */
-}
-
-/* Modern Hero Image */
-.hero-image img {
-    width: 100%; /* Make the image fill the container */
-    height: 100%; /* Ensure the image covers the circular container */
-    object-fit: cover; /* Ensure the image maintains aspect ratio */
-    transform: scale(1.1); /* Keep the zoom effect */
-}
-
-.hero-text p {
-    font-size: 1.5rem;
-    font-weight: 300;
-    margin-bottom: 40px;
-    color: #ddd;
-}
-
-/* Modern Hero Text */
-.hero-text h2 {
-    font-size: 3.5rem;
-    font-weight: 700;
-    margin-bottom: 20px;
-    letter-spacing: 2px;
-    color: #fff;
-}
-
-/* .hero p {
-    font-size: 1.5rem;
-    margin-bottom: 20px;
-} */
-
-/* Modern CTA Button */
-.cta {
-    padding: 15px 40px;
-    background-color: #e91e63;
-    color: white;
-    text-decoration: none;
-    font-size: 1.2rem;
-    border-radius: 50px;
-    transition: all 0.3s ease;
-}
-
-.cta:hover {
-    background-color: #d81b60;
-    transform: translateY(-5px);
-}
-        .section {
-            padding: 100px 50px;
-            text-align: center;
-        }
-
-        /* About Section */
-.about {
-    padding: 100px 50px;
-    text-align: center;
-    background-color: #f4f4f4;
-}
-
-.about h2 {
-    font-size: 2.5rem;
-    margin-bottom: 20px;
-    color: #333;
-}
-
-.about-skills {
-    margin-top: 50px;
-}
-
-/* Skill Bars */
-.skill {
-    margin-bottom: 30px;
-}
-
-.skill h3 {
-    font-size: 1.5rem;
-    margin-bottom: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #333;
-}
-
-.skill h3 i {
-    margin-right: 10px;
-    color: #e91e63;
-}
-
-.skill-bar {
-    width: 100%;
-    background-color: #ddd;
-    border-radius: 10px;
-    overflow: hidden;
-    height: 30px;
-    margin: 0 auto;
-    max-width: 600px;
-}
-
-.skill-level {
-    height: 100%;
-    line-height: 30px;
-    color: white;
-    text-align: right;
-    padding-right: 10px;
-    border-radius: 10px;
-}
-
-.html {
-    width: 90%;
-    background-color: #e44d26;
-}
-
-.css {
-    width: 85%;
-    background-color: #264de4;
-}
-
-.js {
-    width: 75%;
-    background-color: #f0db4f;
-}
-
-.php {
-    width: 80%;
-    background-color: #777bb4;
-}
-
-.laravel {
-    width: 70%;
-    background-color: #ff2d20;
-}
-
-
-.project-list {
-    display: flex;
-    justify-content: space-around;
-    }
-
-    .project-item {
-    width: 30%;
-    height: 300px; /* Set a fixed height for the project item */
-    background-size: cover; /* Ensure the background image covers the entire project item */
-    background-position: center; /* Center the background image */
-    background-repeat: no-repeat; /* Prevent repeating of the background image */
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    padding: 20px;
-    color: white;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-    position: relative;
-    border-radius: 10px; /* Optional: Rounds the corners */
-    overflow: hidden;
-}
-
-.project-item h3, .project-item p {
-    z-index: 2;
-    position: relative;
-}
-
-.project-item::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Dark overlay to make text more readable */
-    z-index: 1;
-}
-
-.project-item:hover {
-    transform: translateY(-10px);
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-}
-
-.contact {
-    padding: 100px 50px;
-    text-align: center;
-    background-color: #f4f4f4;
-}
-
-.contact h2 {
-    font-size: 2.5rem;
-    margin-bottom: 20px;
-    color: #333;
-}
-
-.contact p {
-    font-size: 1.2rem;
-    margin-bottom: 50px;
-    color: #666;
-}
-
-/* Contact Cards */
-.contact-cards {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-}
-
-.contact-card {
-    background-color: #fff;
-    width: 250px;
-    padding: 30px;
-    margin: 20px;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-    text-align: center;
-    position: relative;
-}
-
-.contact-card:hover {
-    transform: translateY(-10px);
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-}
-
-.contact-card i {
-    font-size: 2rem;
-    margin-bottom: 15px;
-    color: #e91e63;
-}
-
-.contact-card h3 {
-    font-size: 1.5rem;
-    margin-bottom: 10px;
-    color: #333;
-}
-
-.contact-card p a {
-    color: #666;
-    text-decoration: none;
-    font-size: 1.1rem;
-    white-space: normal; /* Allow the text to wrap normally */
-    word-break: break-word; /* Break long words if needed */
-}
-
-.contact-card p a:hover {
-    color: #e91e63;
-}
-
-        footer {
-            background-color: #333;
-            color: white;
-            padding: 20px 0;
-            text-align: center;
-        }
-
-        /* Animations */
-        @keyframes fadeInUp {
-            from {
-                opacity: 0;
-                transform: translateY(30px);
-            }
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        /* Responsive */
-        @media screen and (max-width: 768px) {
-            nav .nav-links {
-                display: none;
-                flex-direction: column;
-                position: absolute;
-                top: 10vh;
-                right: 0;
-                width: 100%;
-                background-color: #333;
-                padding: 20px 0;
-            }
-
-            nav .nav-links.nav-active {
-                display: flex;
-            }
-
-            .burger {
-                display: flex;
-            }
-
-            .project-list {
-                flex-direction: column;
-                align-items: center;
-            }
-
-            .project-item {
-                width: 80%;
-                margin-bottom: 20px;
-            }
-
-            .hero-container {
-        flex-direction: column;
-    }
-
-    .hero-image {
-        margin-bottom: 20px;
-    }
-
-    .hero-text h2 {
-        font-size: 2.5rem;
-    }
-
-    .hero-text p {
-        font-size: 1.2rem;
-    }
-
-    .contact-cards {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .contact-card {
-        width: 80%;
-        margin-bottom: 20px;
-    }
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <!-- Navbar -->
-    <nav>
-        <div class="logo">
-            <h1>Shubham This Side</h1>
-        </div>
-        <ul class="nav-links">
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-        <div class="burger">
-            <div class="line1"></div>
-            <div class="line2"></div>
-            <div class="line3"></div>
-        </div>
-    </nav>
+<!-- Navbar -->
+<nav>
+    <div class="logo">
+        <h1>Shubham This Side</h1>
+    </div>
+    <ul class="nav-links" id="nav-links">
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="projects.html">Projects</a></li>
+        <li><a href="#contact">Contact</a></li>
+    </ul>
+    <div class="burger" id="burger">
+        <div class="line1"></div>
+        <div class="line2"></div>
+        <div class="line3"></div>
+    </div>
+</nav>
 
    <!-- Hero Section -->
 <!-- Modern Hero Section -->
@@ -561,13 +140,15 @@
 
     <!-- JavaScript -->
     <script>
-        // Mobile Navbar Toggle
-        const burger = document.querySelector('.burger');
-        const navLinks = document.querySelector('.nav-links');
+document.addEventListener("DOMContentLoaded", function() {
+    const burger = document.getElementById('burger');
+    const navLinks = document.getElementById('nav-links');
 
-        burger.addEventListener('click', () => {
-            navLinks.classList.toggle('nav-active');
-        });
+    burger.addEventListener('click', function() {
+        navLinks.classList.toggle('nav-active');
+    });
+});
+
     </script>
 </body>
 </html>
