--- a/projects.html
+++ b/projects.html
@@ -147,15 +147,15 @@
     <h2>My Projects</h2>
     <br>
     <div class="project-list">
-        <div class="project-item" style="background-image: url('/images/Affiliate.jpg');">
+        <div class="project-item" style="background-image: url('images/Affiliate.jpg');">
             <h3><a href="http://amazon-affiliate.42web.io/?i=1" style="color: gold;">Amazon Affiliate</a></h3>
             <p>A website where customers can buy the best products through affiliate links.</p>
         </div>
-        <div class="project-item" style="background-image: url('/images/Autheentication.jpg');">
+        <div class="project-item" style="background-image: url('images/Autheentication.jpg');">
             <h3><a href="http://authentication-sys.rf.gd/?i=1" style="color: gold;">iDiscuss 24x7</a></h3>
             <p>An authentication system where users can log in securely using email and password.</p>
         </div>
-        <div class="project-item" style="background-image: url('/images/TO-DO-APP.jpg');">
+        <div class="project-item" style="background-image: url('images/TO-DO-APP.jpg');">
             <h3><a href="to_do_app.html" style="color: rgb(60, 255, 0);">TO-Do App</a></h3>
             <p>Simple, user-friendly interface for adding, organizing, and tracking daily to-dos.</p>
         </div>
