--- a/projects.html
+++ b/projects.html
@@ -148,16 +148,20 @@
     <br>
     <div class="project-list">
         <div class="project-item" style="background-image: url('images/Affiliate.jpg');">
-            <h3><a href="http://amazon-affiliate.42web.io/?i=1" style="color: gold;">Amazon Affiliate</a></h3>
+            <h3><a href="http://amazon-affiliate.42web.io/?i=1" style="color: rgb(206, 223, 15);background-color: rgb(45, 38, 38);">Amazon Affiliate</a></h3>
             <p>A website where customers can buy the best products through affiliate links.</p>
         </div>
         <div class="project-item" style="background-image: url('images/Autheentication.jpg');">
-            <h3><a href="http://authentication-sys.rf.gd/?i=1" style="color: gold;">iDiscuss 24x7</a></h3>
+            <h3><a href="http://authentication-sys.rf.gd/?i=1" style="color: gold;background-color: black;">iDiscuss 24x7</a></h3>
             <p>An authentication system where users can log in securely using email and password.</p>
         </div>
         <div class="project-item" style="background-image: url('images/TO-DO-APP.jpg');">
-            <h3><a href="to_do_app.html" style="color: rgb(60, 255, 0);">TO-Do App</a></h3>
+            <h3><a href="to_do_app.html" style="color: rgb(60, 255, 0);background-color: rgb(45, 38, 38);">TO-Do App</a></h3>
             <p>Simple, user-friendly interface for adding, organizing, and tracking daily to-dos.</p>
+        </div>
+        <div class="project-item" style="background-image: url('images/weather.jpg');">
+            <h3><a href="weather.html" style="color: rgb(60, 255, 0);background-color: rgb(45, 38, 38);">Weather APP</a></h3>
+            <p>Your daily weather companion: Accurate forecasts, real-time updates, and local insights,</p>
         </div>
     </div>
 </section>
