--- a/projects.html
+++ b/projects.html
@@ -167,6 +167,10 @@
             <h3><a href="Ai_quote_generator.html" style="color: rgb(60, 255, 0);background-color: rgb(45, 38, 38);font-weight: bolder;">Quote Generator</a></h3>
             <p style="font-weight: bold;color: rgb(248, 247, 247);text-shadow: 2px 2px 5px black;">Your Daily Dose of Motivation!</p>
         </div>
+        <div class="project-item" style="background-image: url('images/Age.jpg');">
+            <h3><a href="Age_Calculator.html" style="color: rgb(60, 255, 0);background-color: rgb(45, 38, 38);font-weight: bolder;">Age Calculator</a></h3>
+            <p style="font-weight: bold;color: rgb(248, 247, 247);text-shadow: 2px 2px 5px black;">Calculate your age in years, months, and days with this user-friendly Age Calculator!</p>
+        </div>
     </div>
 </section>
 
