--- a/projects.html
+++ b/projects.html
@@ -175,6 +175,10 @@
             <h3><a href="Background_Generator.html" style="color: rgb(60, 255, 0);background-color: rgb(45, 38, 38);font-weight: bolder;">Basic Background Generator</a></h3>
             <p style="font-weight: bold;color: rgb(248, 247, 247);text-shadow: 2px 2px 5px black;">Background Color Generator: Easily create beautiful, random backgrounds with just a click!</p>
         </div>
+        <div class="project-item" style="background-image: url('images/Calculator.jpg');">
+                <h3><a href="Calculator.html" style="color: rgb(60, 255, 0);background-color: rgb(45, 38, 38);font-weight: bolder;">Calculator</a></h3>
+                <p style="font-weight: bold;color: rgb(248, 247, 247);text-shadow: 2px 2px 5px black;">Smart, Simple Calculations Anytime, Anywhere!</p>
+        </div>
     </div>
 </section>
 
