--- a/count-down.html
+++ b/count-down.html
@@ -9,7 +9,7 @@
         * { box-sizing: border-box; margin: 0; padding: 0; }
         
         body {
-            background-image: url('/snow.jpg');
+            background-image: url('/count-down.jpg');
             background-size: cover;
             background-position: center center;
             display: flex;
