--- a/projects.html
+++ b/projects.html
@@ -183,6 +183,10 @@
                 <h3><a href="count-down.html" style="color: rgb(60, 255, 0);background-color: rgb(45, 38, 38);font-weight: bolder;">Countdown to New Year</a></h3>
                 <p style="font-weight: bold;color: rgb(248, 247, 247);text-shadow: 2px 2px 5px black;">real-time countdown timer to welcome the new year with style and simplicity!</p>
         </div>
+        <div class="project-item" style="background-image: url('images/logo.jpg');">
+                <h3><a href="Google.html" style="color: rgb(60, 255, 0);background-color: rgb(45, 38, 38);font-weight: bolder;">Google Search</a></h3>
+                <p style="font-weight: bold;color: rgb(248, 247, 247);text-shadow: 2px 2px 5px black;">Enhanced Google Search interface with streamlined results and user-friendly design</p>
+        </div>
     </div>
 </section>
 
