--- a/projects.html
+++ b/projects.html
@@ -187,6 +187,10 @@
                 <h3><a href="Google.html" style="color: rgb(60, 255, 0);background-color: rgb(45, 38, 38);font-weight: bolder;">Google Search</a></h3>
                 <p style="font-weight: bold;color: rgb(248, 247, 247);text-shadow: 2px 2px 5px black;">Enhanced Google Search interface with streamlined results and user-friendly design</p>
         </div>
+        <div class="project-item" style="background-image: url('images/github-logo.png');">
+                <h3><a href="Github_user.html" style="color: rgb(60, 255, 0);background-color: rgb(45, 38, 38);font-weight: bolder;">Github User Search </a></h3>
+                <p style="font-weight: bold;color: rgb(248, 247, 247);text-shadow: 2px 2px 5px black;">Search Github Profiles by Their Username!</p>
+        </div>
     </div>
 </section>
 
