--- a/Github_user.html
+++ b/Github_user.html
@@ -15,154 +15,177 @@
     />
 
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
 
-        body {
-            font-family: 'Roboto', sans-serif;
-            background: linear-gradient(to right, #e66465, #9198e5);
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            color: #333;
-        }
+    body {
+        font-family: 'Roboto', sans-serif;
+        background: linear-gradient(to right, #e66465, #9198e5);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        min-height: 100vh;
+        color: #333;
+    }
 
+    .container {
+        width: 100%;
+        max-width: 400px;
+        padding: 20px;
+    }
+
+    .search-container {
+        display: flex;
+        width: 100%;
+        background-color: #fff;
+        border-radius: 10px;
+        overflow: hidden;
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    }
+
+    #input {
+        width: 100%;
+        padding: 15px;
+        border: none;
+        outline: none;
+        font-size: 1rem;
+    }
+
+    #search {
+        padding: 15px;
+        background-color: #333;
+        color: #fff;
+        cursor: pointer;
+        text-transform: uppercase;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-weight: bold;
+        transition: background 0.3s;
+    }
+
+    #search:hover {
+        background-color: #555;
+    }
+
+    .profile-card {
+        background-color: rgba(255, 255, 255, 0.9);
+        margin-top: 20px;
+        border-radius: 10px;
+        overflow: hidden;
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+        padding: 20px;
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #prof-img {
+        height: 100px;
+        width: 100px;
+        border-radius: 50%;
+        object-fit: cover;
+        margin-bottom: 15px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    }
+
+    .name {
+        font-size: 1.5rem;
+        font-weight: bold;
+        color: #333;
+        margin-top: 10px;
+    }
+
+    #username {
+        font-size: 1rem;
+        color: #555;
+        text-decoration: none;
+        margin-top: 5px;
+        display: inline-block;
+    }
+
+    .bio {
+        font-size: 1.1rem;
+        color: #444;
+        margin: 20px 0;
+        line-height: 1.4;
+        padding: 0 15px;
+        word-wrap: break-word;
+    }
+
+    .follow {
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+        font-size: 1rem;
+        padding: 10px 0;
+        border-top: 1px solid #ddd;
+        gap: 10px;
+    }
+
+    .follow div {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .follow span.no {
+        font-size: 1.2rem;
+        font-weight: 700;
+        color: #333;
+    }
+
+    @media screen and (max-width: 600px) {
         .container {
-            width: 100%;
-            max-width: 500px;
-            padding: 20px;
+            padding: 10px;
         }
 
         .search-container {
-            display: flex;
-            width: 100%;
-            background-color: #fff;
-            border-radius: 10px;
-            overflow: hidden;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-        }
-
-        #input {
-            width: 100%;
-            padding: 15px;
-            border: none;
-            outline: none;
-            font-size: 1rem;
+            flex-direction: column;
+            gap: 10px;
         }
 
         #search {
-            padding: 15px;
-            background-color: #333;
-            color: #fff;
-            cursor: pointer;
-            text-transform: uppercase;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-weight: bold;
-            transition: background 0.3s;
-        }
-
-        #search:hover {
-            background-color: #555;
+            width: 100%;
+            padding: 10px;
+            font-size: 0.9rem;
         }
 
         .profile-card {
-            background-color: rgba(255, 255, 255, 0.8);
-            margin-top: 20px;
-            border-radius: 10px;
-            overflow: hidden;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-            padding: 20px;
-            text-align: center;
-        }
-
-        #prof-img {
-            height: 100px;
-            width: 100px;
-            border-radius: 50%;
-            object-fit: cover;
-            margin-bottom: 15px;
-        }
-
-        .name {
-            font-size: 1.5rem;
-            font-weight: 700;
-            color: #333;
-            margin-top: 10px;
-        }
-
-        #username {
-            font-size: 1rem;
-            color: #555;
-            text-decoration: none;
-            margin-top: 5px;
-            display: inline-block;
-        }
-
-        .bio {
-            font-size: 1.1rem;
-            color: #333;
-            margin: 20px 0;
-        }
-
-        .follow {
-            display: flex;
-            justify-content: space-around;
-            font-size: 1rem;
-            padding: 15px 0;
-            border-top: 1px solid #ddd;
-        }
-
-        .follow div {
-            display: flex;
-            flex-direction: column;
+            padding: 15px;
             align-items: center;
         }
 
-        .follow span.no {
-            font-size: 1.2rem;
-            font-weight: 700;
-            color: #333;
+        #prof-img {
+            height: 80px;
+            width: 80px;
         }
 
-        @media screen and (max-width: 600px) {
-            .container {
-                padding: 10px;
-            }
-
-            .search-container {
-                flex-direction: column;
-            }
-
-            #search {
-                width: 100%;
-                padding: 10px;
-                font-size: 0.9rem;
-            }
-
-            .profile-card {
-                padding: 15px;
-            }
-
-            .name {
-                font-size: 1.3rem;
-            }
-
-            .bio {
-                font-size: 1rem;
-            }
-
-            .follow {
-                flex-direction: column;
-                gap: 10px;
-            }
+        .name {
+            font-size: 1.3rem;
         }
-    </style>
+
+        #username {
+            font-size: 0.9rem;
+            overflow-wrap: break-word;
+            max-width: 100%;
+        }
+
+        .bio {
+            font-size: 1rem;
+        }
+
+        .follow {
+            flex-direction: column;
+            gap: 10px;
+        }
+    }
+</style>
+
 </head>
 <body>
 <div class="container">
